# rust-rocket-mongodb

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: main.yml
src/: main.rs  tests.rs
src/api/: auth.rs  mod.rs  user.rs  user_api.rs
src/helpers/: jwt.rs  mod.rs  mongo_id.rs
src/models/: user_model.rs
src/repository/: mongodb_repo.rs
test/: test.ps1  test.sh
